--- a/completed/views/new.hbs
+++ b/completed/views/new.hbs
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Awesome site!</title>
+  <title>Awesome Web Application!</title>
 </head>
 <body>
   <h1>Awesome site!</h1>
