--- a/completed/views/note.hbs
+++ b/completed/views/note.hbs
@@ -3,7 +3,8 @@
   <title>Awesome Web Application!</title>
 </head>
 <body>
-  <h1>{{note.title}}</h1>
+  <h1>Awesome site!</h1>
+  <h3>{{note.title}}</h3>
   <p>{{note.content}}</p>
   <a href="/">Back to Home</a>
 </body>
